--- a/src/components/PostRow.astro
+++ b/src/components/PostRow.astro
@@ -22,7 +22,7 @@ const {
   <div class="group md:relative md:col-span-3">
     <h3 class="line-clamp-2 text-lg font-semibold">
       <div
-        class="absolute -inset-4 -z-10 scale-95 rounded-lg bg-zinc-200 opacity-0 transition-[opacity,transform] duration-300 ease-in-out group-hover:scale-100 group-hover:opacity-100 dark:bg-zinc-800"
+        class="absolute -inset-4 -z-10 rounded-lg bg-zinc-100 opacity-0 group-hover:opacity-100 dark:bg-zinc-900"
       >
       </div>
       <a href={`/posts/${slug}`}>
