--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -24,6 +24,6 @@ const { Content } = await data.render();
     alt={data.data.title}
     width={512}
     height={512}
-    class="top-8 w-full rounded-lg object-cover md:sticky md:w-72 lg:w-96"
+    class="top-8 w-full rounded-lg object-cover md:sticky md:w-72"
   />
 </article>
