--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -6,24 +6,25 @@ type Props = {
   data: CollectionEntry<"projects">;
 };
 
-const { data } = Astro.props;
-const { Content } = await data.render();
+const {
+  data: {
+    data: { title, coverImage },
+    slug,
+  },
+} = Astro.props;
 ---
 
 <article
-  class="flex items-start gap-4 py-6 max-md:flex-col-reverse md:gap-8 lg:gap-16 lg:py-12"
+  class="grid md:grid-cols-2 border border-zinc-200 dark:border-zinc-800"
 >
-  <div class="top-8 flex-1 md:sticky">
-    <h3 class="text-2xl font-bold">{data.data.title}</h3>
-    <article class="prose prose-zinc max-w-none dark:prose-invert lg:prose-lg">
-      <Content />
-    </article>
-  </div>
   <Image
-    src={data.data.coverImage}
-    alt={data.data.title}
+    src={coverImage}
+    alt={title}
     width={512}
     height={512}
-    class="top-8 w-full rounded-lg object-cover md:sticky md:w-72"
+    class="flex-1 aspect-video object-cover w-full"
   />
+  <div class="flex-1">
+    <h3 class="text-2xl font-bold">{title}</h3>
+  </div>
 </article>
