SupaBot AI Chatbot Widget Added

--- a/src/layouts/RootLayout.astro
+++ b/src/layouts/RootLayout.astro
@@ -35,6 +35,11 @@ const {
         />
       )
     }
+    <!-- SupaBot AI -->
+    <script
+      async
+      src="https://supabotai.com/api/widget/js?id=clm29uwbn0001l20883uegbig"
+    ></script>
   </head>
   <body
     class="flex min-h-screen flex-col bg-white text-zinc-950 dark:bg-zinc-950 dark:text-zinc-50"
