--- a/src/layouts/RootLayout.astro
+++ b/src/layouts/RootLayout.astro
@@ -24,17 +24,11 @@ const {
     <title>{title}</title>
     <meta name="description" content={description} />
     <meta name="keywords" content={keywords.join(",")} />
-    <!-- Tinybird Web Analytics -->
-    {
-      process.env.NODE_ENV === "production" && (
-        <script
-          defer
-          src="https://unpkg.com/@tinybirdco/flock.js"
-          data-host="https://api.us-east.tinybird.co"
-          data-token="p.eyJ1IjogImUwMzI1YTE1LTRkMTItNDE4Zi1iMzZlLWM4OGM4ZjMyZWM2NCIsICJpZCI6ICI3NWRlZmI2NS01OTg0LTQyZmItOGQyNC04OTM1MzRkNDM5MTAiLCAiaG9zdCI6ICJ1c19lYXN0In0.7fpoZhGELSBJF-drMYUSsM3KzAp57NheZI5nD2Wq5Hw"
-        />
-      )
-    }
+    <!-- Plausible Script -->
+    <script
+      defer
+      data-domain="rohid.dev"
+      src="https://plausible.io/js/script.js"></script>
     <!-- SupaBot AI -->
     <script
       async
